VituBot-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: vitubot
  name: vitubot
  namespace: default
spec:
  selector:
    matchLabels:
      io.kompose.service: vitubot
  template:
    metadata:
      labels:
        io.kompose.service: vitubot
    spec:
      containers:
        - env:
            - name: JWT_PATH
              value: /var/run/secrets/kubernetes.io/serviceaccount/token
            - name: VAULT_ADDR
              value: http://vault.vault:8200
          image: registry.quokka.ninja/ccfs/vitubot/vitubot:latest
          imagePullPolicy: Always
          name: vitubot
          ports:
            - containerPort: 80
              protocol: TCP
      imagePullSecrets:
        - name: gitlab-cr
      restartPolicy: Always
      serviceAccountName: vault
